# OdorSim

./: .gitignore  README.md  SETUP.md  VNC_SETUP.md  pyproject.toml  setup_gaden.sh
docs/: SCHEMA.md  gaden_robosuite_cosim_d067d61f.plan.md  odorsim_make_unified_cosim.plan.md  phase5_recording.plan.md
odor_sim/: __init__.py  _make.py
odor_sim/assets/objects/: LICENSE-LIBERO
odor_sim/assets/objects/milk/: milk.xml
odor_sim/assets/objects/plate/: plate.xml
odor_sim/assets/objects/porcelain_mug/: porcelain_mug.xml
odor_sim/assets/objects/porcelain_mug_small/: porcelain_mug_small.xml
odor_sim/assets/objects/red_coffee_mug/: red_coffee_mug.xml
odor_sim/assets/objects/red_coffee_mug_small/: red_coffee_mug_small.xml
odor_sim/assets/objects/white_yellow_mug/: white_yellow_mug.xml
odor_sim/assets/objects/white_yellow_mug_small/: white_yellow_mug_small.xml
odor_sim/bridge/: __init__.py  _enose_keys.py  export_scene.py  gaden_bridge.py  scripted_place.py  teleop.py
odor_sim/config/: __init__.py  frame_map.py  gas_types.py  liquids.py  liquids.yaml  objects.py  objects.yaml  recipes.py  voc_recipes.yaml
odor_sim/envs/: __init__.py  base.py  classify_liquid.py  classify_liquid_place.py  odor_lift.py  odor_object.py  odor_place.py  odor_profile.py  registry.py  scene_builder.py
odor_sim/envs/robots/: __init__.py
odor_sim/policy/: __init__.py
odor_sim/recording/: __init__.py  convert.py  synthesize.py
odor_sim/runtime/: __init__.py  gaden_server.py  odor_monitor.py  sensor_monitor.py  session.py
odor_sim/sensors/: __init__.py  mox_pid.py
ros2_ws/src/odor_gaden_rt/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/odor_gaden_rt/src/: rt_server.cpp
scenarios/10x6_uniform/cad_models/: 10x6_door_left.stl  10x6_door_right.stl  10x6_walls.stl
scenarios/10x6_uniform/environment_configurations/config1/: config.yaml
scenarios/10x6_uniform/wind_simulations/uniform/: wind_0.csv
setup/: activate.sh  install_ros_gaden.sh  install_sim_env.sh  requirements-sim.txt
tests/: test_make_cosim.py  test_make_export.py  test_odor_monitor.py  test_phase3.py  test_phase4_bridge.py  test_phase4_sensor.py  test_phase4_teleop.py  test_phase5_lerobot.py  test_phase5_synthesize.py
(+2 files in other folders)
